[gd_scene load_steps=9 format=3 uid="uid://bwliesedvreqm"]

[ext_resource type="Script" uid="uid://cxcqq1fjksdwy" path="res://scenes/game/game.gd" id="1_bdhmt"]
[ext_resource type="LabelSettings" uid="uid://b33suvsme6y5e" path="res://resources/white_label_24.tres" id="2_5i0tg"]
[ext_resource type="LabelSettings" uid="uid://hskef8lknykd" path="res://resources/dark_label_24.tres" id="2_bdhmt"]
[ext_resource type="Texture2D" uid="uid://c6lvun8t48nne" path="res://assets/ui/blue_button00.png" id="3_bdhmt"]
[ext_resource type="Texture2D" uid="uid://cpxgdxgowtn1f" path="res://assets/ui/green_button00.png" id="4_87uf6"]
[ext_resource type="Texture2D" uid="uid://cbjgt2iji3ufl" path="res://assets/ui/grey_button00.png" id="5_2a8rs"]
[ext_resource type="PackedScene" uid="uid://bbmtochkyfygo" path="res://game_over_ui.tscn" id="8_2a8rs"]
[ext_resource type="PackedScene" uid="uid://ds0j2rusds58s" path="res://scenes/scorer/scorer.tscn" id="8_87uf6"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bdhmt")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TileGrid" type="GridContainer" parent="HB"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
columns = 6

[node name="MC" type="MarginContainer" parent="HB"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="VB" type="VBoxContainer" parent="HB/MC"]
layout_mode = 2
size_flags_vertical = 4

[node name="HB" type="HBoxContainer" parent="HB/MC/VB"]
layout_mode = 2

[node name="MovesLabel" type="Label" parent="HB/MC/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("2_bdhmt")

[node name="MovesValueLabel" type="Label" parent="HB/MC/VB/HB"]
layout_mode = 2
text = "000"
label_settings = ExtResource("2_bdhmt")

[node name="HB2" type="HBoxContainer" parent="HB/MC/VB"]
layout_mode = 2

[node name="PairsLabel" type="Label" parent="HB/MC/VB/HB2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs"
label_settings = ExtResource("2_bdhmt")

[node name="PairsValueLabel" type="Label" parent="HB/MC/VB/HB2"]
layout_mode = 2
text = "000"
label_settings = ExtResource("2_bdhmt")

[node name="Spacer" type="Control" parent="HB/MC/VB"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HB/MC/VB"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_bdhmt")
texture_pressed = ExtResource("4_87uf6")
texture_hover = ExtResource("5_2a8rs")

[node name="ExitLabel" type="Label" parent="HB/MC/VB/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Exit"
label_settings = ExtResource("2_5i0tg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scorer" parent="." instance=ExtResource("8_87uf6")]

[node name="Sound" type="AudioStreamPlayer" parent="."]

[node name="GameOverUI" parent="." instance=ExtResource("8_2a8rs")]
layout_mode = 1

[connection signal="pressed" from="HB/MC/VB/ExitButton" to="." method="_on_exit_button_pressed"]
